2012-04-21  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-view.el (mime-view-mailcap-files): Reverse the order of
	files.  Do not care of mime-mailcap-file's value.
	(mime-view-read-mailcap-files): The file indicated by
	mime-mailcap-file has the most priority.

2012-03-07  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-pgp-filtered-validities): New variable.
	(mime-edit-pgp-keys-valid-key): New function.
	(mime-edit-pgp-get-signers, mime-edit-encrypt-pgp-mime): Use them.
	Do not return invalid keys.
	Cf. https://github.com/ikazuhiro/semi-epg/pull/1

2011-07-16  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-make-encrypt-recipient-header): When
	mime-edit-pgp-encrypt-to-self is non-nil, add From field value to
	recipients.
	(mime-edit-encrypt-recipient-fields-list): Add "From".

	* mime-epg.el (mime-preview-application/*-signature): Result
	string always terminates with LF.

2011-06-24  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-sign-pgp-nonmime): Renamed from
	`mime-edit-sign-pgp-nomime'.

2011-06-23  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-epg.el (mime-verify-application/*-signature-internal): New
	function.
	(mime-verify-application/*-signature): Use it.
	(mime-preview-application/*-signature): New function.

	* semi-setup.el (Top): Setup mime-preview-application/*-signature
	for previewing signature entity.

2011-06-19  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el: Specify file mode and coding.

2011-06-18  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-transfer-level): Fix wrong docstring.
	(mime-file-types): Set 'name' parameter of Content-Type field and
	'filename' parameter of Content-Disposition field.

2011-06-08  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-insert-file): Encode a filename when
	FLIM does not support non-ASCII filename.
	(mime-edit-decode-single-part-in-buffer): Keep 'name' parameter of