@@ -1,3 +1,13 @@
+2012-04-27  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
+	Experimental support of shr (Simple HTML Renderer) for html
+	entity.
+	* mime-shr.el: New file.
+
+	* semi-setup.el (mime-html-previewer-alist): Likewise.
+
+	* SEMI-ELS (top): Likewise.
+
 2012-04-21  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
 	* mime-view.el (mime-view-mailcap-files): Reverse the order of
